Fix some aligning of layout
git-svn-id: https://ssl.supermind.nl/collab/svn/submin/submin/trunk@684 9dfea958-5e0b-0410-aa7e-b09452dc4efc

--- a/www/css/login.css
+++ b/www/css/login.css
@@ -13,6 +13,7 @@ div.login ul li {
 }
 
 div.login ul li label {
+	float: left;
 	text-align: right;
 	width: 80px;
 }
@@ -21,3 +22,7 @@ div.login ul li label {
 	width: 160px;
 }
 
+div.error {
+	width: 400px;
+	margin: 0 auto;
+}
